tests_bucklescript/__snapshots__/Error_Template_missingField_re.367bc10c.0.snapshot
Error Template › missingField1.re › output
File \"operations/errors/missingField1.re\", line 6, characters 6-27:
6 |       thisFieldDoesNotExist
          ^^^^^^^^^^^^^^^^^^^^^
Error: Unknown field 'thisFieldDoesNotExist' on type CustomScalarObject

  We've found a bug for you!
  operations/errors/missingField1.re
  
  Error while running external preprocessor
Command line: ../_build/default/src/bucklescript_bin/bin.exe -template-tag-location=gql '/var/folders/nn/nkqr2fl53p93lzfh2n6s17hh0000gn/T/camlppx3daf30' '/var/folders/nn/nkqr2fl53p93lzfh2n6s17hh0000gn/T/camlppx93e378'

  

